# gain-boi

./: .gitignore  CMakeLists.txt  README.md  diagram.json  platformio.ini  wokwi.toml
core/include/gain_boi/: App.hpp
core/src/: App.cpp  Serialization.cpp
firmware/include/: BoardConfig.hpp
firmware/src/: main.cpp
simulator/src/: main.cpp
tests/: board_config_smoke.cpp  core_tests.cpp
wokwi/: README.md
wokwi/scenarios/: workout-smoke.yaml
