cmake_minimum_required(VERSION 3.22)
project(gain_boi VERSION 0.1.0 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
option(GAIN_BOI_COVERAGE "Enable gcov/lcov coverage" OFF)
if(GAIN_BOI_COVERAGE AND CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
  add_compile_options(--coverage -O0 -g)
  add_link_options(--coverage)
endif()
add_library(gain_boi_core
  core/src/App.cpp core/src/Serialization.cpp)
target_include_directories(gain_boi_core PUBLIC core/include)
target_compile_options(gain_boi_core PRIVATE -Wall -Wextra -Wpedantic -Werror)
add_executable(gain_boi_sim simulator/src/main.cpp)
set_target_properties(gain_boi_sim PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/simulator)
target_link_libraries(gain_boi_sim PRIVATE gain_boi_core)
target_compile_options(gain_boi_sim PRIVATE -Wall -Wextra -Wpedantic -Werror)
include(CTest)
if(BUILD_TESTING)
  add_executable(gain_boi_core_tests tests/core_tests.cpp)
  target_link_libraries(gain_boi_core_tests PRIVATE gain_boi_core)
  target_compile_options(gain_boi_core_tests PRIVATE -Wall -Wextra -Wpedantic -Werror)
  add_test(NAME gain_boi_core_tests COMMAND gain_boi_core_tests)
  add_executable(board_config_smoke tests/board_config_smoke.cpp)
  target_include_directories(board_config_smoke PRIVATE firmware/include)
  target_compile_options(board_config_smoke PRIVATE -Wall -Wextra -Wpedantic -Werror)
  add_test(NAME board_config_smoke COMMAND board_config_smoke)
endif()
add_custom_target(coverage
  COMMAND ${CMAKE_COMMAND} -E echo "Run: cmake -S . -B build-coverage -DGAIN_BOI_COVERAGE=ON && cmake --build build-coverage && ctest --test-dir build-coverage && lcov --capture --directory build-coverage --output-file coverage.info"
  VERBATIM)
